crates/libs/hush-ffi/hush.h

/* Auto-generated by cbindgen — do not edit */

#ifndef HUSH_FFI_H
#define HUSH_FFI_H

/* Warning: this file is auto-generated by cbindgen. Do not modify. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Opaque Ed25519 keypair handle.
 */
typedef struct HushKeypair HushKeypair;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Return the library version (static string, do **not** free).
 *
 * # Safety
 *
 * The returned pointer is valid for the lifetime of the process.
 */
const char *hush_version(void);

/**
 * Free a string previously returned by this library.
 *
 * Passing `NULL` is a no-op.
 *
 * # Safety
 *
 * `ptr` must have been returned by a `hush_*` function that documents
 * "caller must free with `hush_free_string`".
 */
void hush_free_string(char *ptr);

/**
 * Return a pointer to the last error message (static, do **not** free).
 *
 * Returns an empty string if no error has been recorded on this thread.
 *
 * # Safety
 *
 * The returned pointer is valid until the next FFI call on the same thread.
 */
const char *hush_last_error(void);

/**
 * Compute SHA-256 hash, writing 32 bytes into `out_32`.
 *
 * Returns 0 on success, -1 on error.
 *
 * # Safety
 *
 * - `data` must point to at least `len` readable bytes (may be NULL if `len == 0`).
 * - `out_32` must point to a writable buffer of at least 32 bytes.
 */
int32_t hush_sha256(const uint8_t *data, uintptr_t len, uint8_t *out_32);

/**
 * Compute SHA-256 hash, returning a lowercase, unprefixed hex string.
 *
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `data` must point to at least `len` readable bytes (may be NULL if `len == 0`).
 */
char *hush_sha256_hex(const uint8_t *data, uintptr_t len);

/**
 * Compute Keccak-256 hash, writing 32 bytes into `out_32`.
 *
 * Returns 0 on success, -1 on error.
 *
 * # Safety
 *
 * - `data` must point to at least `len` readable bytes (may be NULL if `len == 0`).
 * - `out_32` must point to a writable buffer of at least 32 bytes.
 */
int32_t hush_keccak256(const uint8_t *data, uintptr_t len, uint8_t *out_32);

/**
 * Compute Keccak-256 hash, returning a lowercase, unprefixed hex string.
 *
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `data` must point to at least `len` readable bytes (may be NULL if `len == 0`).
 */
char *hush_keccak256_hex(const uint8_t *data, uintptr_t len);

/**
 * Canonicalize a JSON string according to RFC 8785.
 *
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error (invalid JSON, canonicalization failure).
 *
 * # Safety
 *
 * `json` must be a valid NUL-terminated C string.
 */
char *hush_canonicalize_json(const char *json);

/**
 * Detect jailbreak attempts in the given text.
 *
 * Returns a JSON string describing the detection result, or `NULL` on error.
 * The caller must free the returned string with [`hush_free_string`].
 *
 * # Safety
 *
 * - `text` must be a valid, NUL-terminated UTF-8 C string.
 * - `session_id` may be `NULL` (treated as no session).
 * - `config_json` may be `NULL` (uses a default detector singleton).
 */
char *hush_detect_jailbreak(const char *text, const char *session_id, const char *config_json);

/**
 * Compute the Merkle root from a JSON array of hex-encoded leaf hashes.
 *
 * Returns a hex-encoded root hash with `0x` prefix.
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `leaf_hashes_json` must be a valid NUL-terminated C string containing
 * a JSON array of hex-encoded hash strings.
 */
char *hush_merkle_root(const char *leaf_hashes_json);

/**
 * Generate a Merkle inclusion proof for a leaf at the given index.
 *
 * Returns a JSON-serialized `MerkleProof`.
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `leaf_hashes_json` must be a valid NUL-terminated C string containing
 * a JSON array of hex-encoded hash strings.
 */
char *hush_merkle_proof(const char *leaf_hashes_json, uintptr_t index);

/**
 * Verify a Merkle inclusion proof.
 *
 * Returns 1 if valid, 0 if invalid, -1 on error.
 *
 * # Safety
 *
 * - `leaf_hex` must be a valid NUL-terminated C string (hex-encoded hash).
 * - `proof_json` must be a valid NUL-terminated C string (JSON-serialized `MerkleProof`).
 * - `root_hex` must be a valid NUL-terminated C string (hex-encoded root hash).
 */
int32_t hush_verify_merkle_proof(const char *leaf_hex,
                                 const char *proof_json,
                                 const char *root_hex);

/**
 * Verify a signed receipt.
 *
 * Returns a JSON string with the verification result.
 * `cosigner_hex` may be `NULL` if there is no co-signer.
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * - `receipt_json` must be a valid NUL-terminated C string (JSON-serialized `SignedReceipt`).
 * - `signer_hex` must be a valid NUL-terminated C string (hex-encoded public key).
 * - `cosigner_hex` may be `NULL` or a valid NUL-terminated C string.
 */
char *hush_verify_receipt(const char *receipt_json,
                          const char *signer_hex,
                          const char *cosigner_hex);

/**
 * Sign an unsigned receipt with a keypair.
 *
 * Takes a JSON-serialized `Receipt` and returns a JSON-serialized `SignedReceipt`.
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * - `receipt_json` must be a valid NUL-terminated C string (JSON-serialized `Receipt`).
 * - `kp` must be a valid `HushKeypair` pointer.
 */
char *hush_sign_receipt(const char *receipt_json, const struct HushKeypair *kp);

/**
 * Hash a receipt using the specified algorithm.
 *
 * `algorithm` must be `"sha256"` or `"keccak256"`.
 * Returns a hex-encoded hash string with `0x` prefix.
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * - `receipt_json` must be a valid NUL-terminated C string (JSON-serialized `Receipt`).
 * - `algorithm` must be a valid NUL-terminated C string.
 */
char *hush_hash_receipt(const char *receipt_json, const char *algorithm);

/**
 * Get the canonical JSON representation of a receipt (the bytes that are signed).
 *
 * Caller must free the returned string with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `receipt_json` must be a valid NUL-terminated C string (JSON-serialized `Receipt`).
 */
char *hush_receipt_canonical_json(const char *receipt_json);

/**
 * Sanitize model output for secret/PII leakage.
 *
 * Returns a JSON string describing the sanitization result, or `NULL` on error.
 * The caller must free the returned string with [`hush_free_string`].
 *
 * # Safety
 *
 * - `text` must be a valid, NUL-terminated UTF-8 C string.
 * - `config_json` may be `NULL` (uses default `OutputSanitizerConfig`).
 */
char *hush_sanitize_output(const char *text, const char *config_json);

/**
 * Generate a new random Ed25519 keypair.
 *
 * Caller must free with `hush_keypair_destroy`.
 *
 * # Safety
 *
 * The returned pointer is exclusively owned by the caller.
 */
struct HushKeypair *hush_keypair_generate(void);

/**
 * Create a keypair from a 32-byte seed.
 *
 * Caller must free with `hush_keypair_destroy`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `seed_32` must point to at least 32 readable bytes.
 */
struct HushKeypair *hush_keypair_from_seed(const uint8_t *seed_32);

/**
 * Create a keypair from a hex-encoded seed.
 *
 * Caller must free with `hush_keypair_destroy`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `hex` must be a valid NUL-terminated C string.
 */
struct HushKeypair *hush_keypair_from_hex(const char *hex);

/**
 * Get the public key as a hex-encoded string (64 hex chars, no 0x prefix).
 *
 * Caller must free with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `kp` must be a valid pointer returned by a `hush_keypair_*` constructor.
 */
char *hush_keypair_public_key_hex(const struct HushKeypair *kp);

/**
 * Write the 32-byte public key into `out_32`.
 *
 * Returns 0 on success, -1 on error.
 *
 * # Safety
 *
 * - `kp` must be a valid `HushKeypair` pointer.
 * - `out_32` must point to a writable buffer of at least 32 bytes.
 */
int32_t hush_keypair_public_key_bytes(const struct HushKeypair *kp, uint8_t *out_32);

/**
 * Sign a message, returning the signature as a hex-encoded string (128 hex chars).
 *
 * Caller must free with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * - `kp` must be a valid `HushKeypair` pointer.
 * - `msg` must point to at least `len` readable bytes.
 */
char *hush_keypair_sign_hex(const struct HushKeypair *kp, const uint8_t *msg, uintptr_t len);

/**
 * Sign a message, writing the 64-byte signature into `out_64`.
 *
 * Returns 0 on success, -1 on error.
 *
 * # Safety
 *
 * - `kp` must be a valid `HushKeypair` pointer.
 * - `msg` must point to at least `len` readable bytes.
 * - `out_64` must point to a writable buffer of at least 64 bytes.
 */
int32_t hush_keypair_sign(const struct HushKeypair *kp,
                          const uint8_t *msg,
                          uintptr_t len,
                          uint8_t *out_64);

/**
 * Export the keypair seed as a hex-encoded string (64 hex chars).
 *
 * Caller must free with `hush_free_string`.
 * Returns `NULL` on error.
 *
 * # Safety
 *
 * `kp` must be a valid `HushKeypair` pointer.
 */
char *hush_keypair_to_hex(const struct HushKeypair *kp);

/**
 * Destroy a keypair, freeing its memory.
 *
 * Passing `NULL` is a no-op.
 *
 * # Safety
 *
 * `kp` must have been returned by a `hush_keypair_*` constructor, and must
 * not be used after this call.
 */
void hush_keypair_destroy(struct HushKeypair *kp);

/**
 * Verify an Ed25519 signature using hex-encoded public key and signature.
 *
 * Returns 1 if valid, 0 if invalid, -1 on error.
 *
 * # Safety
 *
 * - `pubkey_hex` must be a valid NUL-terminated C string (64 hex chars, optional 0x prefix).
 * - `msg` must point to at least `msg_len` readable bytes (may be NULL if `msg_len == 0`).
 * - `sig_hex` must be a valid NUL-terminated C string (128 hex chars, optional 0x prefix).
 */
int32_t hush_verify_ed25519(const char *pubkey_hex,
                            const uint8_t *msg,
                            uintptr_t msg_len,
                            const char *sig_hex);

/**
 * Verify an Ed25519 signature using raw byte pointers.
 *
 * Returns 1 if valid, 0 if invalid, -1 on error.
 *
 * # Safety
 *
 * - `pubkey_32` must point to 32 readable bytes.
 * - `msg` must point to at least `msg_len` readable bytes (may be NULL if `msg_len == 0`).
 * - `sig_64` must point to 64 readable bytes.
 */
int32_t hush_verify_ed25519_bytes(const uint8_t *pubkey_32,
                                  const uint8_t *msg,
                                  uintptr_t msg_len,
                                  const uint8_t *sig_64);

/**
 * Return the hex-encoded public key for a watermark configuration.
 *
 * Returns a C string, or `NULL` on error.
 * The caller must free the returned string with [`hush_free_string`].
 *
 * # Safety
 *
 * `config_json` must be a valid, NUL-terminated UTF-8 C string.
 */
char *hush_watermark_public_key(const char *config_json);

/**
 * Watermark a prompt and return a JSON result.
 *
 * Returns a JSON string with `original`, `watermarked`, and `watermark` fields,
 * or `NULL` on error.
 * The caller must free the returned string with [`hush_free_string`].
 *
 * # Safety
 *
 * - `prompt` must be a valid, NUL-terminated UTF-8 C string.
 * - `config_json` must be a valid, NUL-terminated UTF-8 C string.
 * - `app_id` may be `NULL` (defaults to `"unknown"`).
 * - `session_id` may be `NULL` (defaults to `"unknown"`).
 */
char *hush_watermark_prompt(const char *prompt,
                            const char *config_json,
                            const char *app_id,
                            const char *session_id);

/**
 * Extract (and verify) a watermark from text.
 *
 * Returns a JSON string with `found`, `verified`, `errors`, and `watermark` fields,
 * or `NULL` on error.
 * The caller must free the returned string with [`hush_free_string`].
 *
 * # Safety
 *
 * - `text` must be a valid, NUL-terminated UTF-8 C string.
 * - `config_json` must be a valid, NUL-terminated UTF-8 C string
 *   (serialized `WatermarkVerifierConfig`).
 */
char *hush_extract_watermark(const char *text, const char *config_json);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* HUSH_FFI_H */